// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > Проверка монтирования компонента с вертикальной ориентацией 1`] = `
<div
  class="_container_cb0040 _containerVerMode_cb0040"
  role="form"
>
  <div
    class="_header_cb0040 _headerVerMode_cb0040"
  >
    <div
      class="_heading_cb0040"
    >
      <h3>
        Куда теперь?
      </h3>
    </div>
    <div
      class=""
      cmdk-root=""
      role="form-command"
      tabindex="-1"
    >
      <label
        cmdk-label=""
        for=":r12:"
        id=":r11:"
        style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
      />
      <div
        class="relative flex flex-col w-full wide:w-72 cursor-pointer"
      >
        <div
          class="flex items-center"
        >
          <svg
            class="lucide lucide-search absolute left-4 h-5 w-5 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            aria-autocomplete="list"
            aria-controls=":r10:"
            aria-expanded="true"
            aria-labelledby=":r11:"
            autocomplete="off"
            autocorrect="off"
            class="h-14 w-full bg-grayscale-200 hover:bg-grayscale-300 rounded-xl px-6 pt-4 text-base placeholder-transparent transition duration-300 focus:bg-white focus:outline-none pr-8 peer pl-12 cursor-pointer ring-transparent flex items-center justify-center"
            cmdk-input=""
            data-is-corrected="true"
            id=":r12:"
            placeholder=" "
            role="combobox"
            spellcheck="false"
            type="text"
            value="Омск"
          />
          <svg
            class="lucide lucide-x absolute right-4 h-5 w-5 text-gray-500 cursor-pointer"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </div>
        <label
          class="absolute cursor-pointer left-12 text-base text-grayscale-400 transition-all duration-300 top-2 text-black"
          for="command-input"
        >
          Где искать
        </label>
      </div>
      <div
        class="absolute transition-all duration-500 ease-in-out transform opacity-0 translate-y-10 max-h-0 -z-10"
      >
        <div
          aria-label="Suggestions"
          class="max-h-[300px] w-full bg-grayscale-0 mt-2 rounded-md border overflow-y-auto overflow-x-hidden"
          cmdk-list=""
          id=":r10:"
          role="listbox"
        >
          <div
            cmdk-list-sizer=""
          >
            <div
              class="overflow-hidden text-md [&_[cmdk-group-heading]]:text-lg [&_[cmdk-group-heading]]:p-4 [&_[cmdk-group-heading]]:font-medium"
              cmdk-group=""
              data-value="Направления"
              role="presentation"
            >
              <div
                aria-hidden="true"
                cmdk-group-heading=""
                id=":r14:"
              >
                Направления
              </div>
              <div
                aria-labelledby=":r14:"
                cmdk-group-items=""
                role="group"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="true"
                    data-value="ОмскОмская область"
                    id=":r15:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Омск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Омская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="ТомскТомская область"
                    id=":r18:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Томск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Томская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="МоскваМосква"
                    id=":r16:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Москва
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Москва
                      </span>
                    </div>
                  </div>
                </div>
                <div />
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:r1a:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="data-[state=open]:border-grayscale-600 flex items-center rounded-xl text-sm transition-colors px-4 bg-grayscale-200 hover:bg-grayscale-300 data-[state=open]:text-sm data-[state=open]:bg-grayscale-0 data-[state=open]:border data-[state=open]:transition-all data-[state=open]:duration-300 h-14 w-full wide:w-72 border border-transparent"
      data-state="closed"
      role="form-datePicker"
      type="button"
    >
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <svg
          class="lucide lucide-calendar h-5 w-5 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <label
          class="text-grayscale-400 text-base"
        >
          Когда
        </label>
      </div>
    </button>
    <div
      class="flex flex-col relative rounded-xl overflow-hidden"
    >
      <div
        aria-labelledby="radix-:r1c:"
        role="group"
      >
        <div
          class="truncate absolute left-12 transition-all duration-300 text-base text-grayscale-400 cursor-pointer top-2"
          id="radix-:r1c:"
        >
          Участники
        </div>
      </div>
      <button
        aria-autocomplete="none"
        aria-controls="radix-:r1b:"
        aria-expanded="false"
        class="flex items-center data-[state=open]:bg-grayscale-0 rounded-xl outline-none data-[state=open]:border data-[state=open]:border-grayscale-400 justify-start h-14 w-full wide:w-72 px-4 py-4 text-base transition-all duration-300 bg-grayscale-200 hover:bg-grayscale-300 false"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <img
          alt="icon"
          class="h-5 w-5 mr-3"
          src="/src/shared/assets/icons/users.svg"
        />
        <div
          aria-labelledby="radix-:r1d:"
          role="group"
        >
          <div
            class="truncate mt-3"
            id="radix-:r1d:"
          >
            Без детей
          </div>
        </div>
      </button>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-base transition-colors focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary-0 text-grayscale-500 hover:bg-primary-100 h-14 w-72 rounded-xl"
      role="searchButton"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Form > Проверка монтирования компонента с вертикальной ориентацией 2`] = `
<div
  class="_container_cb0040 _containerVerMode_cb0040"
  role="form"
>
  <div
    class="_header_cb0040 _headerVerMode_cb0040"
  >
    <div
      class="_heading_cb0040"
    >
      <h3>
        Куда теперь?
      </h3>
    </div>
    <div
      class=""
      cmdk-root=""
      role="form-command"
      tabindex="-1"
    >
      <label
        cmdk-label=""
        for=":r12:"
        id=":r11:"
        style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
      />
      <div
        class="relative flex flex-col w-full wide:w-72 cursor-pointer"
      >
        <div
          class="flex items-center"
        >
          <svg
            class="lucide lucide-search absolute left-4 h-5 w-5 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            aria-autocomplete="list"
            aria-controls=":r10:"
            aria-expanded="true"
            aria-labelledby=":r11:"
            autocomplete="off"
            autocorrect="off"
            class="h-14 w-full bg-grayscale-200 hover:bg-grayscale-300 rounded-xl px-6 pt-4 text-base placeholder-transparent transition duration-300 focus:bg-white focus:outline-none pr-8 peer pl-12 cursor-pointer ring-transparent flex items-center justify-center"
            cmdk-input=""
            data-is-corrected="true"
            id=":r12:"
            placeholder=" "
            role="combobox"
            spellcheck="false"
            type="text"
            value="Омск"
          />
          <svg
            class="lucide lucide-x absolute right-4 h-5 w-5 text-gray-500 cursor-pointer"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </div>
        <label
          class="absolute cursor-pointer left-12 text-base text-grayscale-400 transition-all duration-300 top-2 text-black"
          for="command-input"
        >
          Где искать
        </label>
      </div>
      <div
        class="absolute transition-all duration-500 ease-in-out transform opacity-0 translate-y-10 max-h-0 -z-10"
      >
        <div
          aria-label="Suggestions"
          class="max-h-[300px] w-full bg-grayscale-0 mt-2 rounded-md border overflow-y-auto overflow-x-hidden"
          cmdk-list=""
          id=":r10:"
          role="listbox"
        >
          <div
            cmdk-list-sizer=""
          >
            <div
              class="overflow-hidden text-md [&_[cmdk-group-heading]]:text-lg [&_[cmdk-group-heading]]:p-4 [&_[cmdk-group-heading]]:font-medium"
              cmdk-group=""
              data-value="Направления"
              role="presentation"
            >
              <div
                aria-hidden="true"
                cmdk-group-heading=""
                id=":r14:"
              >
                Направления
              </div>
              <div
                aria-labelledby=":r14:"
                cmdk-group-items=""
                role="group"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="true"
                    data-value="ОмскОмская область"
                    id=":r15:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Омск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Омская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="ТомскТомская область"
                    id=":r18:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Томск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Томская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="МоскваМосква"
                    id=":r16:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Москва
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Москва
                      </span>
                    </div>
                  </div>
                </div>
                <div />
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:r1a:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="data-[state=open]:border-grayscale-600 flex items-center rounded-xl text-sm transition-colors px-4 bg-grayscale-200 hover:bg-grayscale-300 data-[state=open]:text-sm data-[state=open]:bg-grayscale-0 data-[state=open]:border data-[state=open]:transition-all data-[state=open]:duration-300 h-14 w-full wide:w-72 border border-transparent"
      data-state="closed"
      role="form-datePicker"
      type="button"
    >
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <svg
          class="lucide lucide-calendar h-5 w-5 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <label
          class="text-grayscale-400 text-base"
        >
          Когда
        </label>
      </div>
    </button>
    <div
      class="flex flex-col relative rounded-xl overflow-hidden"
    >
      <div
        aria-labelledby="radix-:r1c:"
        role="group"
      >
        <div
          class="truncate absolute left-12 transition-all duration-300 text-base text-grayscale-400 cursor-pointer top-2"
          id="radix-:r1c:"
        >
          Участники
        </div>
      </div>
      <button
        aria-autocomplete="none"
        aria-controls="radix-:r1b:"
        aria-expanded="false"
        class="flex items-center data-[state=open]:bg-grayscale-0 rounded-xl outline-none data-[state=open]:border data-[state=open]:border-grayscale-400 justify-start h-14 w-full wide:w-72 px-4 py-4 text-base transition-all duration-300 bg-grayscale-200 hover:bg-grayscale-300 false"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <img
          alt="icon"
          class="h-5 w-5 mr-3"
          src="/src/shared/assets/icons/users.svg"
        />
        <div
          aria-labelledby="radix-:r1d:"
          role="group"
        >
          <div
            class="truncate mt-3"
            id="radix-:r1d:"
          >
            Без детей
          </div>
        </div>
      </button>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-base transition-colors focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary-0 text-grayscale-500 hover:bg-primary-100 h-14 w-72 rounded-xl"
      role="searchButton"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Form > Проверка монтирования компонента с вертикальной ориентацией 3`] = `
<h3>
  Куда теперь?
</h3>
`;

exports[`Form > Проверка монтирования компонента с горизонтальной ориентацией 1`] = `
<div
  class="_container_cb0040 _containerHorMode_cb0040"
  role="form"
>
  <div
    class="_header_cb0040 _headerHorMode_cb0040"
  >
    <div
      class=""
      cmdk-root=""
      role="form-command"
      tabindex="-1"
    >
      <label
        cmdk-label=""
        for=":ri:"
        id=":rh:"
        style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
      />
      <div
        class="relative flex flex-col w-full wide:w-72 cursor-pointer"
      >
        <div
          class="flex items-center"
        >
          <svg
            class="lucide lucide-search absolute left-4 h-5 w-5 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            aria-autocomplete="list"
            aria-controls=":rg:"
            aria-expanded="true"
            aria-labelledby=":rh:"
            autocomplete="off"
            autocorrect="off"
            class="h-14 w-full bg-grayscale-200 hover:bg-grayscale-300 rounded-xl px-6 pt-4 text-base placeholder-transparent transition duration-300 focus:bg-white focus:outline-none pr-8 peer pl-12 cursor-pointer ring-transparent flex items-center justify-center"
            cmdk-input=""
            data-is-corrected="true"
            id=":ri:"
            placeholder=" "
            role="combobox"
            spellcheck="false"
            type="text"
            value="Омск"
          />
          <svg
            class="lucide lucide-x absolute right-4 h-5 w-5 text-gray-500 cursor-pointer"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </div>
        <label
          class="absolute cursor-pointer left-12 text-base text-grayscale-400 transition-all duration-300 top-2 text-black"
          for="command-input"
        >
          Где искать
        </label>
      </div>
      <div
        class="absolute transition-all duration-500 ease-in-out transform opacity-0 translate-y-10 max-h-0 -z-10"
      >
        <div
          aria-label="Suggestions"
          class="max-h-[300px] w-full bg-grayscale-0 mt-2 rounded-md border overflow-y-auto overflow-x-hidden"
          cmdk-list=""
          id=":rg:"
          role="listbox"
        >
          <div
            cmdk-list-sizer=""
          >
            <div
              class="overflow-hidden text-md [&_[cmdk-group-heading]]:text-lg [&_[cmdk-group-heading]]:p-4 [&_[cmdk-group-heading]]:font-medium"
              cmdk-group=""
              data-value="Направления"
              role="presentation"
            >
              <div
                aria-hidden="true"
                cmdk-group-heading=""
                id=":rk:"
              >
                Направления
              </div>
              <div
                aria-labelledby=":rk:"
                cmdk-group-items=""
                role="group"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="true"
                    data-value="ОмскОмская область"
                    id=":rl:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Омск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Омская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="ТомскТомская область"
                    id=":ro:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Томск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Томская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="МоскваМосква"
                    id=":rm:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Москва
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Москва
                      </span>
                    </div>
                  </div>
                </div>
                <div />
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:rq:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="data-[state=open]:border-grayscale-600 flex items-center rounded-xl text-sm transition-colors px-4 bg-grayscale-200 hover:bg-grayscale-300 data-[state=open]:text-sm data-[state=open]:bg-grayscale-0 data-[state=open]:border data-[state=open]:transition-all data-[state=open]:duration-300 h-14 w-full wide:w-72 border border-transparent"
      data-state="closed"
      role="form-datePicker"
      type="button"
    >
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <svg
          class="lucide lucide-calendar h-5 w-5 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <label
          class="text-grayscale-400 text-base"
        >
          Когда
        </label>
      </div>
    </button>
    <div
      class="flex flex-col relative rounded-xl overflow-hidden"
    >
      <div
        aria-labelledby="radix-:rs:"
        role="group"
      >
        <div
          class="truncate absolute left-12 transition-all duration-300 text-base text-grayscale-400 cursor-pointer top-2"
          id="radix-:rs:"
        >
          Участники
        </div>
      </div>
      <button
        aria-autocomplete="none"
        aria-controls="radix-:rr:"
        aria-expanded="false"
        class="flex items-center data-[state=open]:bg-grayscale-0 rounded-xl outline-none data-[state=open]:border data-[state=open]:border-grayscale-400 justify-start h-14 w-full wide:w-72 px-4 py-4 text-base transition-all duration-300 bg-grayscale-200 hover:bg-grayscale-300 false"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <img
          alt="icon"
          class="h-5 w-5 mr-3"
          src="/src/shared/assets/icons/users.svg"
        />
        <div
          aria-labelledby="radix-:rt:"
          role="group"
        >
          <div
            class="truncate mt-3"
            id="radix-:rt:"
          >
            Без детей
          </div>
        </div>
      </button>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-base transition-colors focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary-0 text-grayscale-500 hover:bg-primary-100 h-12 px-10 rounded-xl"
      role="searchButton"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Form > Проверка монтирования компонента с горизонтальной ориентацией 2`] = `
<div
  class="_container_cb0040 _containerHorMode_cb0040"
  role="form"
>
  <div
    class="_header_cb0040 _headerHorMode_cb0040"
  >
    <div
      class=""
      cmdk-root=""
      role="form-command"
      tabindex="-1"
    >
      <label
        cmdk-label=""
        for=":ri:"
        id=":rh:"
        style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
      />
      <div
        class="relative flex flex-col w-full wide:w-72 cursor-pointer"
      >
        <div
          class="flex items-center"
        >
          <svg
            class="lucide lucide-search absolute left-4 h-5 w-5 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            aria-autocomplete="list"
            aria-controls=":rg:"
            aria-expanded="true"
            aria-labelledby=":rh:"
            autocomplete="off"
            autocorrect="off"
            class="h-14 w-full bg-grayscale-200 hover:bg-grayscale-300 rounded-xl px-6 pt-4 text-base placeholder-transparent transition duration-300 focus:bg-white focus:outline-none pr-8 peer pl-12 cursor-pointer ring-transparent flex items-center justify-center"
            cmdk-input=""
            data-is-corrected="true"
            id=":ri:"
            placeholder=" "
            role="combobox"
            spellcheck="false"
            type="text"
            value="Омск"
          />
          <svg
            class="lucide lucide-x absolute right-4 h-5 w-5 text-gray-500 cursor-pointer"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </div>
        <label
          class="absolute cursor-pointer left-12 text-base text-grayscale-400 transition-all duration-300 top-2 text-black"
          for="command-input"
        >
          Где искать
        </label>
      </div>
      <div
        class="absolute transition-all duration-500 ease-in-out transform opacity-0 translate-y-10 max-h-0 -z-10"
      >
        <div
          aria-label="Suggestions"
          class="max-h-[300px] w-full bg-grayscale-0 mt-2 rounded-md border overflow-y-auto overflow-x-hidden"
          cmdk-list=""
          id=":rg:"
          role="listbox"
        >
          <div
            cmdk-list-sizer=""
          >
            <div
              class="overflow-hidden text-md [&_[cmdk-group-heading]]:text-lg [&_[cmdk-group-heading]]:p-4 [&_[cmdk-group-heading]]:font-medium"
              cmdk-group=""
              data-value="Направления"
              role="presentation"
            >
              <div
                aria-hidden="true"
                cmdk-group-heading=""
                id=":rk:"
              >
                Направления
              </div>
              <div
                aria-labelledby=":rk:"
                cmdk-group-items=""
                role="group"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="true"
                    data-value="ОмскОмская область"
                    id=":rl:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Омск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Омская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="ТомскТомская область"
                    id=":ro:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Томск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Томская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="МоскваМосква"
                    id=":rm:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Москва
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Москва
                      </span>
                    </div>
                  </div>
                </div>
                <div />
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:rq:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="data-[state=open]:border-grayscale-600 flex items-center rounded-xl text-sm transition-colors px-4 bg-grayscale-200 hover:bg-grayscale-300 data-[state=open]:text-sm data-[state=open]:bg-grayscale-0 data-[state=open]:border data-[state=open]:transition-all data-[state=open]:duration-300 h-14 w-full wide:w-72 border border-transparent"
      data-state="closed"
      role="form-datePicker"
      type="button"
    >
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <svg
          class="lucide lucide-calendar h-5 w-5 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <label
          class="text-grayscale-400 text-base"
        >
          Когда
        </label>
      </div>
    </button>
    <div
      class="flex flex-col relative rounded-xl overflow-hidden"
    >
      <div
        aria-labelledby="radix-:rs:"
        role="group"
      >
        <div
          class="truncate absolute left-12 transition-all duration-300 text-base text-grayscale-400 cursor-pointer top-2"
          id="radix-:rs:"
        >
          Участники
        </div>
      </div>
      <button
        aria-autocomplete="none"
        aria-controls="radix-:rr:"
        aria-expanded="false"
        class="flex items-center data-[state=open]:bg-grayscale-0 rounded-xl outline-none data-[state=open]:border data-[state=open]:border-grayscale-400 justify-start h-14 w-full wide:w-72 px-4 py-4 text-base transition-all duration-300 bg-grayscale-200 hover:bg-grayscale-300 false"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <img
          alt="icon"
          class="h-5 w-5 mr-3"
          src="/src/shared/assets/icons/users.svg"
        />
        <div
          aria-labelledby="radix-:rt:"
          role="group"
        >
          <div
            class="truncate mt-3"
            id="radix-:rt:"
          >
            Без детей
          </div>
        </div>
      </button>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-base transition-colors focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary-0 text-grayscale-500 hover:bg-primary-100 h-12 px-10 rounded-xl"
      role="searchButton"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Form > Проверка рендеринга компонента 1`] = `
<div
  class="_container_cb0040 _containerVerMode_cb0040"
  role="form"
>
  <div
    class="_header_cb0040 _headerVerMode_cb0040"
  >
    <div
      class="_heading_cb0040"
    >
      <h3>
        Куда теперь?
      </h3>
    </div>
    <div
      class=""
      cmdk-root=""
      role="form-command"
      tabindex="-1"
    >
      <label
        cmdk-label=""
        for=":r2:"
        id=":r1:"
        style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
      />
      <div
        class="relative flex flex-col w-full wide:w-72 cursor-pointer"
      >
        <div
          class="flex items-center"
        >
          <svg
            class="lucide lucide-search absolute left-4 h-5 w-5 text-gray-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            aria-autocomplete="list"
            aria-controls=":r0:"
            aria-expanded="true"
            aria-labelledby=":r1:"
            autocomplete="off"
            autocorrect="off"
            class="h-14 w-full bg-grayscale-200 hover:bg-grayscale-300 rounded-xl px-6 pt-4 text-base placeholder-transparent transition duration-300 focus:bg-white focus:outline-none pr-8 peer pl-12 cursor-pointer ring-transparent flex items-center justify-center"
            cmdk-input=""
            data-is-corrected="true"
            id=":r2:"
            placeholder=" "
            role="combobox"
            spellcheck="false"
            type="text"
            value="Омск"
          />
          <svg
            class="lucide lucide-x absolute right-4 h-5 w-5 text-gray-500 cursor-pointer"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </div>
        <label
          class="absolute cursor-pointer left-12 text-base text-grayscale-400 transition-all duration-300 top-2 text-black"
          for="command-input"
        >
          Где искать
        </label>
      </div>
      <div
        class="absolute transition-all duration-500 ease-in-out transform opacity-0 translate-y-10 max-h-0 -z-10"
      >
        <div
          aria-label="Suggestions"
          class="max-h-[300px] w-full bg-grayscale-0 mt-2 rounded-md border overflow-y-auto overflow-x-hidden"
          cmdk-list=""
          id=":r0:"
          role="listbox"
        >
          <div
            cmdk-list-sizer=""
          >
            <div
              class="overflow-hidden text-md [&_[cmdk-group-heading]]:text-lg [&_[cmdk-group-heading]]:p-4 [&_[cmdk-group-heading]]:font-medium"
              cmdk-group=""
              data-value="Направления"
              role="presentation"
            >
              <div
                aria-hidden="true"
                cmdk-group-heading=""
                id=":r4:"
              >
                Направления
              </div>
              <div
                aria-labelledby=":r4:"
                cmdk-group-items=""
                role="group"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="true"
                    data-value="ОмскОмская область"
                    id=":r5:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Омск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Омская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="ТомскТомская область"
                    id=":r8:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Томск
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Томская область
                      </span>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class="flex flex-row gap-2 hover:bg-grayscale-200 transition duration-300 relative cursor-default py-2 px-4 select-none rounded-sm outline-none"
                    cmdk-item=""
                    data-disabled="false"
                    data-selected="false"
                    data-value="МоскваМосква"
                    id=":r6:"
                    role="option"
                  >
                    <div
                      class="_iconContainer_411f7b"
                    >
                      <svg
                        class="lucide lucide-map-pin _icon_411f7b"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                        />
                        <circle
                          cx="12"
                          cy="10"
                          r="3"
                        />
                      </svg>
                    </div>
                    <div
                      class="_location_411f7b"
                    >
                      <span>
                        Москва
                      </span>
                      <span
                        class="_region_411f7b"
                      >
                        Москва
                      </span>
                    </div>
                  </div>
                </div>
                <div />
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:ra:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="data-[state=open]:border-grayscale-600 flex items-center rounded-xl text-sm transition-colors px-4 bg-grayscale-200 hover:bg-grayscale-300 data-[state=open]:text-sm data-[state=open]:bg-grayscale-0 data-[state=open]:border data-[state=open]:transition-all data-[state=open]:duration-300 h-14 w-full wide:w-72 border border-transparent"
      data-state="closed"
      role="form-datePicker"
      type="button"
    >
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <svg
          class="lucide lucide-calendar h-5 w-5 text-gray-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <label
          class="text-grayscale-400 text-base"
        >
          Когда
        </label>
      </div>
    </button>
    <div
      class="flex flex-col relative rounded-xl overflow-hidden"
    >
      <div
        aria-labelledby="radix-:rc:"
        role="group"
      >
        <div
          class="truncate absolute left-12 transition-all duration-300 text-base text-grayscale-400 cursor-pointer top-2"
          id="radix-:rc:"
        >
          Участники
        </div>
      </div>
      <button
        aria-autocomplete="none"
        aria-controls="radix-:rb:"
        aria-expanded="false"
        class="flex items-center data-[state=open]:bg-grayscale-0 rounded-xl outline-none data-[state=open]:border data-[state=open]:border-grayscale-400 justify-start h-14 w-full wide:w-72 px-4 py-4 text-base transition-all duration-300 bg-grayscale-200 hover:bg-grayscale-300 false"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <img
          alt="icon"
          class="h-5 w-5 mr-3"
          src="/src/shared/assets/icons/users.svg"
        />
        <div
          aria-labelledby="radix-:rd:"
          role="group"
        >
          <div
            class="truncate mt-3"
            id="radix-:rd:"
          >
            Без детей
          </div>
        </div>
      </button>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-base transition-colors focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary-0 text-grayscale-500 hover:bg-primary-100 h-14 w-72 rounded-xl"
      role="searchButton"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Form > Проверка рендеринга компонента 2`] = `
<h3>
  Куда теперь?
</h3>
`;

exports[`Form > Проверка рендеринга компонента 3`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-base transition-colors focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary-0 text-grayscale-500 hover:bg-primary-100 h-14 w-72 rounded-xl"
  role="searchButton"
>
  Искать
</button>
`;
